Use tilt to evaluate gitignore.erb file on init

--- a/lib/wp/.gitignore.erb
+++ b/lib/wp/.gitignore.erb
@@ -1,6 +1,6 @@
 .htaccess
 node_modules/
-wp-content/themes/unyson/assets/js/vendor/
+wp-content/themes/<%= yield %>/assets/js/vendor/
 .sass-cache
 main.min.css
 main.min.css.map
@@ -8,6 +8,6 @@ Movefile
 wp-content/*.sql
 .DS_Store
 site.js
-wp-content/themes/unyson/**/*.min.js
+wp-content/themes/<%= yield %>/**/*.min.js
 wp-config.php
 uploads/
